--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,16 @@
   color: #61dafb;
 }
 
+#resume-preview {
+  background-color: white !important;
+  width: 100%;
+  padding: 20px;
+  box-shadow: none !important; /* Remove any unwanted shadows */
+}
+
+
+
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
