--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,10 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+#resume-preview {
+  background-color: white !important;
+  width: 100%;
+  padding: 20px;
+  box-shadow: none !important; /* Remove any unwanted shadows */
+}
+
